# 2048AI

./: .gitignore  2048AI.py  AI_2048.py  AI_2048_function.py  AI_2048_test.py  AI_2048_tuning.py  AI_2048_v2.py  board.py  env_2048.py  env_2048_copy.py  env_2048_v2.py  game.py  game_history.txt  game_numba.py  main.py  pyproject.toml  simulate_2048_v2.py  speed_test.py  test.py  utils.py
