[project]
name = "2048ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bayesian-optimization==1.4.3",
    "gymnasium>=1.2.0",
    "numba==0.61",
    "numpy==2.1",
    "optuna>=4.5.0",
    "pandas>=2.3.1",
    "ray[tune]>=2.49.1",
    "tqdm>=4.67.1",
]
